# Rocket-Equations

./: .gitignore  README.md  cameraHandoff.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
docs/: handoff.md  mac-play-instructions.md  nextStep.md  reccomendations.md  render-coordinate-strategy.md  rendering-roadmap.md  rocket-model-alignment-handoff.md
examples/: CloudCoverageSampler.ts  EarthCloudSystem.tsx  GlobalCloudShell.tsx  LocalCloudField.tsx  cloud-layer-task.md  scene.tsx
examples/earthReference/: earth-fragment-shader.glsl  earth-vertex-shader.glsl  main.js  object.ts  source.md
examples/takram/: Clouds-WorldOriginRebasing.tsx  Vanilla.js
reference/: main.js
rocket_equations/: earth_to_moon_launch_sim.py
src/: App.tsx  index.css  mission.ts  use-mission-scene.ts  use-mission-simulation.ts  use-scoreboard.ts  vite-env.d.ts
src/assets/: Monolith.glb
src/camera/: controller.ts  frames.ts  modes.ts  profiles.ts  targets.ts
src/mission-scene/: camera-clip-planes.ts  camera.ts  earth-renderer-mode.ts  frame-state.ts  runtime.ts  sync-celestial-bodies.ts  sync-far-away-labels.ts  sync-indicators.ts  sync-launch-preview.ts  sync-prediction-display.ts  sync-render-mode.ts  sync-rocket-visuals.ts  sync-scene.ts  sync-trails.ts  sync-ui.ts  types.ts
src/mission-simulation/: config.ts  status.ts  types.ts  use-mission-controls.ts
src/physics/: bodies.ts  gravity.ts  heading-control.ts  integrator.ts  launch-guidance.ts
src/render-space/: frame.ts  scene-position.ts
src/rocket/: definitions.ts  variant.ts
(+144 files in other folders)
