[project]
name = "rocket_equations"
version = "0.1.0"
description = "Simple physics simulations of rockets and orbital mechanics"
authors = [{ name = "=", email = "ngstafford1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["vpython (>=7.6.5,<8.0.0)"]

[dependency-groups]
dev = [
  "ruff (>=0.15.11,<0.16.0)",
  "pyright (>=1.1.408,<2.0.0)",
  "pytest (>=9.0.3,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
